Clean up repository. Fixed CNTK dependency and openmpi library

--- a/sandhog/Dockerfile
+++ b/sandhog/Dockerfile
@@ -1,4 +1,6 @@
 From malmopy-cntk-cpu-py27:latest
 
+RUN ["/bin/bash", "-c", "touch /etc/ld.so.conf.d/mpi.conf && echo '/root/openmpi/lib' >> /etc/ld.so.conf.d/mpi.conf && ldconfig && source ~/.bashrc"]
+
 # Add experiments from local machine into docker image
-ADD ./pig_chase/* /root/malmo-challenge/ai_challenge/pig_chase
+ADD * /root/malmo-challenge/ai_challenge/pig_chase/
