removed unnecessary command from docker-compose

--- a/sandhog/Dockerfile
+++ b/sandhog/Dockerfile
@@ -1,5 +1,6 @@
 From malmopy-cntk-cpu-py27:latest
 
+# openmpi library dependency
 RUN ["/bin/bash", "-c", "touch /etc/ld.so.conf.d/mpi.conf && echo '/root/openmpi/lib' >> /etc/ld.so.conf.d/mpi.conf && ldconfig && source ~/.bashrc"]
 
 # Add experiments from local machine into docker image
