--- a/docker/sandhog/docker-compose.yml
+++ b/docker/sandhog/docker-compose.yml
@@ -11,7 +11,7 @@ services:
   agents:
       image: sandhog_experiment:latest
       working_dir: /root/malmo-challenge/ai_challenge/pig_chase
-      command: bash -c "python qlearner.py malmo1:10000 malmo2:10000 & tensorboard --logdir 'results' --port 6006"
+      command: bash -c "python sandhog_baseline.py -t sandhog malmo1:10000 malmo2:10000 & tensorboard --logdir 'results' --port 6006"
       ports:
         - "6006:6006"
       links:
