--- a/docker/random/docker-compose.yml
+++ b/docker/random/docker-compose.yml
@@ -9,7 +9,7 @@ services:
       expose:
         - "10000"
   agents:
-      image: sandhog_experiment:latest
+      image: random_experiment:latest
       working_dir: /root/malmo-challenge/ai_challenge/pig_chase
       command: bash -c "python sandhog_baseline.py -t random malmo1:10000 malmo2:10000 & tensorboard --logdir 'results' --port 6006"
       ports:
